chore: コース表示やバッジ表示に必要な情報を返すようにした
